# wasm-menu-planner

./: Cargo.tml  Cargo.toml  demo_index.html  index.html  readme.md
.github/workflows/: build-check.yml
css/: main.css
schemas/: schema.graphql
src/: graphql.rs  lib.rs
src/pages/: week.rs
