[package]
version = "0.1.0"
name = "menu-planner"
authors = ["Alex White"]
description = "App Description"
categories = ["Food"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
regex = "1"
lazy_static = "1.4.0"
stdweb = "0.4.20"
cynic = "0.12.1"

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
